updated at: 2023-04-25 22:41, ArmoredPack06 - 月面平城京 - BOOTH

--- a/VRChat/15/1265415.html
+++ b/VRChat/15/1265415.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "AGkZVgh/6tfTUYJzf+dYhNDl5VEW7+wkL9Ot5Rv4f9o="></script>
+    "jtbOOyqqzoJX0JpovKH9mViSjnE7ZoSepv5gawWJoLs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ArmoredPack06","description":"DDW-031-H Vanquisher　大型電磁砲\nDDW-031-M Vigilant　　腰部懸下式可変電磁砲\nDDW-032-M 　　　　　　ミサイルポッド\nDDW-032-S　　　　　 　シールドスラスター\nDDD-033               汎用装甲群\nDDD-034-V Whiptail　　大型ブースターユニット\nDDD-035　Gila　　　　 高機動強襲ユニット\nDDD-Ex　　　　　　　　高圧洗浄機/火炎放射器\nを提供します。\n\n\n※なお、DDW-031-M,DDW-032-M、DDW-032-S、DDD-033のみ今後販売予定のアバターに転用される可能性アリ(限定数型販売の予定)","url":"https://booth.pm/ja/items/1265415","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/64446b0b-9225-4dba-a979-4708b93cc2ef/i/1265415/38572b1e-ad56-484a-bf1f-c908d0df052b_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AGkZVgh/6tfTUYJzf+dYhNDl5VEW7+wkL9Ot5Rv4f9o="></script>
+    nonce="jtbOOyqqzoJX0JpovKH9mViSjnE7ZoSepv5gawWJoLs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1265415/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               696
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1265415/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               696
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
