--- a/VRChat/69/1263969.html
+++ b/VRChat/69/1263969.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "6tjDnCQhAbexbddciRdqeGrTtL6Q1Om/hRUvz8AK/fM="></script>
+    "G9o33mTG7lkNzTCYgB0ubTdu61CzYzPakOD0akGQ3eE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『ルナレッタ(変身セット)』","description":"本モデルはUnityのHumanoid形式に対応した3Dモデルとなっております。\n【ご注意】\nこのパッケージはVRChatのSDK2(avatars2.0)向けに設定したものです。以降のバージョンに対応させる場合はご自身での設定が必要となりますのでご了承の上ご購入ください。\n\n\n『ルナレッタ(変身セット)』には\n\n・変身アニメーションの付いたルナレッタのモデル\n・単品のルナレッタ(人間ver)と(獣人ver)の内容物すべて\n・四足verのおまけモデル(ボーン未設定)\n\nが入っています。\n\n\n\n\n＜内容物＞\n・unitypackageファイル　３バージョン分\n・blend形式およびfbx形式モデルデータ\n　(fbx形式はテクスチャ未設定)　３バージョン分\n・テクスチャ画像　\n・psd形式改変用テクスチャ画像　\n・サンプル表情アニメーション　３バージョン分\n・四足verのおまけモデル\n\n＜利用規約＞\n動画やゲーム、アプリにおける本モデルの利用は商用を含めて可能です。\nモデル自体の再配布、販売を禁止します。\n(ゲーム等の公開の際、暗号化していないフォルダに入れるなど\nモデルデータとして再度使用できる状態での配布・販売はおやめください)\nモデルの改変は公序良俗に反するものでなければご自由に行ってください。\n\nVRChatへのアップロードにて購入者ご本人のみが使用する場合は再配布と捉えないものとします。\nアバターペデスタルやCloning機能など他人が使用できる状態にすることはご遠慮ください。\n\n\n＜更新履歴＞\n\n2019/03/16　不具合修正しました(Ver1.01)\n・獣人モデル\n表情発動時に体のメッシュがはみ出る、動いた際に服(首の前掛け)のメッシュ裏がはみ出る、表情LunaSmileFの設定ミス　を修正\n\n・変身モデル\n人間時、腕を上げるとメッシュが出るのを修正\n人間・獣人の単品バージョンのblend、fbx、unitypackageファイルを追加\n\n2019/03/08　販売開始しました　(Ver1.00)","url":"https://booth.pm/ja/items/1263969","offers":{"priceCurrency":"JPY","@type":"Offer","price":"4000"},"image":"https://booth.pximg.net/c/620x620/b58bbbf9-f493-4b3f-87ba-a69d30c4b84f/i/1263969/b662d9d1-2b28-41d2-8846-ab7cf21dc653_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6tjDnCQhAbexbddciRdqeGrTtL6Q1Om/hRUvz8AK/fM="></script>
+    nonce="G9o33mTG7lkNzTCYgB0ubTdu61CzYzPakOD0akGQ3eE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1263969/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               100
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1263969/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               100
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
