--- a/VRChat/73/1265373.html
+++ b/VRChat/73/1265373.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "wsQFQRF3fWp4sWW7QI0xRjLDp/lqI4vFYndac0R4fHs="></script>
+    "8r+Y0bJIq/P/3npwsPLf/kk1L2Ho8e7w7biX/bVO9wo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRoidテクスチャ　3着セット","description":"ワンピーステクスチャ用です。\n和風的な服\n黒ワンピース的な服\nセーターとコート\nの三点詰め込みセットです。\n\n【内容物】\nテクスチャ\nとりあえずの利用規約\n【簡易規約】\n・データ改変→可\n・商用利用→可\n・改変したものを再配布→可\n・改変していない再配布→不可※\n(ただし動画配信、VRChatアバタ―での使用など、テクスチャとして利用できない状態でのアップロードは大丈夫です。)","url":"https://booth.pm/ja/items/1265373","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/832fe23e-6abb-4cdc-9ac5-102b9173c10f/i/1265373/a163ed79-e3d7-4cc5-86da-902f8b470a07_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="wsQFQRF3fWp4sWW7QI0xRjLDp/lqI4vFYndac0R4fHs="></script>
+    nonce="8r+Y0bJIq/P/3npwsPLf/kk1L2Ho8e7w7biX/bVO9wo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -170,7 +170,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1265373/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
@@ -185,14 +185,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1265373/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
