--- a/VRChat/63/1264363.html
+++ b/VRChat/63/1264363.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "HnWuNNtdK3JN7zDBT6xn6iGuB8o+9ttkfx6h5ptnex4="></script>
+    "B7ENAtH2vfep29QfZR3LHwUUpM7hcydDweR9I0LN350="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"サイバー・ネジ","description":"サイバー・ネジ紹介文\n■概要\nボクセル製のネジにSubstance Painterで塗ったサイバーなネジです。\nサブスタボクセルの可能性を広げて行きたいのでサブスタのデータなども同梱しています。\n青い光が流れるサイバーチックなネジとノーマルな普通ネジを同梱しています。\n頭に刺したり手に持たせたりご活用ください。\n------------------------------\n●商品内容●\n\n★サイバー・ネジ　内容物\n・Substance Painter用データ\n・VOX形式データ\n・unithy package\n\nモデル仕様\n本体：(kugi.FBX)\n△35512\nテクスチャサイズ：2048ピクセル平方\n\n作成者：sunawo\nTwitter：@sunawo56\n------------------------------\n制定日 2019/03/07\n\nこのモデルを購入した時点で利用規約に同意したものとします。\nまた、この規約は予告なく変更される場合があります。\n\n・禁止事項\n同封している3Dモデル、テクスチャを含んだデータの配布、販売はすべて禁止します。\n\n\nゲームやアニメーション、動画、個人使用目的でのVRMの作成などでの使用や改変などはすべて大丈夫です。\n\n免責事項\n本モデルを利用することで発生したトラブルや損害に対して制作者sunawoは一切責任を負いません。ご了承ください。\n\nまた、このモデルを改変したものの著作権はすべて制作者本人に帰属します。","url":"https://booth.pm/ja/items/1264363","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/5a1d9873-37ec-41a0-948d-cba2fd6905b1/i/1264363/24d3c657-f071-41c4-9100-c1c6d6ca1310_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HnWuNNtdK3JN7zDBT6xn6iGuB8o+9ttkfx6h5ptnex4="></script>
+    nonce="B7ENAtH2vfep29QfZR3LHwUUpM7hcydDweR9I0LN350="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,10 +173,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1264363/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              32
+                              33
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1264363/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              32
+                              33
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
