updated at: 2023-04-25 22:42, 【無料】和ヘアピン - すーともの倉庫 - BOOTH

--- a/VRChat/07/1265007.html
+++ b/VRChat/07/1265007.html
@@ -97,9 +97,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "AhqTNcKySxS2INMFcH/YTfdsYoXJj4nQBNMZZPS/edM="></script>
+    "s8NEF1rPXMMNoYu8X1rqylv+biAC8wP8qg0MIT3g+5k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】和ヘアピン","description":"和ヘアピンです。","url":"https://booth.pm/ja/items/1265007","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/64375fde-2ace-439e-b3d1-b29bffc0831e/i/1265007/4fab2a73-a3b4-44fc-aa64-8ec5ed63cb9e_base_resized.jpg"}
     </script>
@@ -110,7 +110,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AhqTNcKySxS2INMFcH/YTfdsYoXJj4nQBNMZZPS/edM="></script>
+    nonce="s8NEF1rPXMMNoYu8X1rqylv+biAC8wP8qg0MIT3g+5k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -134,6 +134,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -177,7 +179,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1265007/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               141
@@ -192,14 +194,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1265007/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               141
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
