--- a/VRChat/71/1264971.html
+++ b/VRChat/71/1264971.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "qmf8Wi1fsivquM9n69nn1zSwqmmBLD+umd+heOIXqIE="></script>
+    "gap452eUiVsuR8j3HDmDFNi2Y0i3n5ZUySREBtP10H8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat】RUI v0.93（アーリー版）","description":"Vケット２限定先行発売　歯車区-03 CRY Eng.\n\nカッコかわいい系VRchat用モデルRUI\n設定済みUnityパッケージとパッケージ内FBXデータ\nArktoon-ShadersとAAShader別格を使用しています。\n（初期設定だとピンク色になりますので導入お願い致します）\n\n開発中なため定期的にアップデートしていきます。そのため多少見た目が変わることがあります。\ntwitter@syozuiまでご意見、ご感想、フォローよろしくお願い致します。\nリップシンク１５種とアニメーションオーバーライド６種を実装しました。\n\n\n＊更新履歴＊\n3/8 14:18 パッケージ内にprefabしか入っていない問題を修正。\n3/8 18:34 口の中のテクスチャが反映されていない問題を修正。唇に発生するスジを修正。リップシンクの機能向上。外套に発生するトゲを修正。\n3/11 17:46 脚部をメカっぽいカッコいいものに変更、各種ウェイトを調節、細部デザインの更新。　v0.91に更新\n3/17 19:44 リップシンクを3種からフル15種に更新、ハンドサインに表情（アニメーションオーバーライド）6種を実装。他、カスタム用のブレンドシェイプを追加。v0.93に更新\n＊誠に申し訳ありません。お手数ですが、ダウンロードのし直しをお願い致します。\n\n＊＊当モデルを購入した時点で利用規約に同意したものとみなします。\nーーーーーーーー利用規約ーーーーーーーー \n＊＊著作権について\n当モデルおよび関連データの著作権は製作者の\nバの骨@syozui　に帰属するものとします\n\n＊＊禁止行為について\n・再配布、転売、当方の利益を侵害する行為（全て改変の有無に関らず）\n・VRchatのアバターペデスタルに相当するアバター共有、利用行為。\n・公序良俗に反する行為、宗教的、政治的利用\n上記に当てはまらない改変、配信は自由です\n\n＊＊免責事項\nモデルデータを利用して発生したいかなる損害、損失、その他不利益などには一切の責任を負いません。\n\n規約は予告なく変更することがあり、本BOOTHまたはtwitter(@syozui)で告知する最新のものが適用されるとします。\nーーーーーーーーーーーーーーーーーー\n△40000前後\n発売期間は3/17までとなります。（再販時期未定）","url":"https://booth.pm/ja/items/1264971","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/7a181708-0845-483d-886f-bd17ec93533b/i/1264971/1e6a26a0-4840-44cb-93ee-60d47d1e8254_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qmf8Wi1fsivquM9n69nn1zSwqmmBLD+umd+heOIXqIE="></script>
+    nonce="gap452eUiVsuR8j3HDmDFNi2Y0i3n5ZUySREBtP10H8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1264971/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               104
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1264971/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               104
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
