updated at: 2023-04-25 22:43, オリジナル３Dモデル　Ewlis(ユーリス) - 河童の水源 - BOOTH

--- a/VRChat/82/1264882.html
+++ b/VRChat/82/1264882.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Nlas8XmPBrTc/S+UNTgWrF7dSZG1yokHO/o2n5c37yc="></script>
+    "YD0y3QPleMvvNvHwviuMxBs+BX0DuWpP6Bmy86h6eZk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル３Dモデル　Ewlis(ユーリス)","description":"EwlisはunityのHumanoid形式対応のオリジナル３Dキャラクターです。\nVRChatでの使用を想定しております。エルフ耳のおてんば娘です。\nご購入前に下記利用規約等を読んだうえでの購入をお願いします。\n\n更新履歴\n190314　v1.11　PrefabがGenericだった為Humanoidに修正\n\n190313　v1.1　腰トラがない場合の胸のウェイト不具合の修正。\n八重歯が外すぎたので内側にもう一つ八重歯2を追加しました。\n\n190308　v1.0　販売開始　フルトラのみ対応　腰トラがない場合胸のウェイトに不具合があることを確認済み\n\n\n2019 10/23　現在\n○　利用規約\n　　・本モデルデータをご利用された場合には、利用規約にご同意いただいたものとみなされます。\n　　・また、本規約は予告なく変更される場合があります。\n　　・本モデルを使用することで発生した問題・損失等があっても販売元は一切責任を負いません。\n　　・購入され、ダウンロードされたすべての再配布を禁止します。\n　　・ご購入者様以外が購入物を所有できる形での作品の販売は許可された場合を除き禁止します。必ず先に連絡をお願いいたします。\n　　・本モデルを使った宗教活動、及びキャラクターイメージを著しく損なう行為を禁止します。\n　　・その他、製作者が不適切と考える形での利用を禁止します。\n\n\n○　許可されたもの\n　　・VRChatへのアップロード、ただしプライベートアバターに限られます　ペデスタル・パブリックアバターに設定することは禁止します。\n　　・改変　基本自由です\n　　・二次創作、ただしその二次創作にてお金のやり取りが発生する場合は必ず製作者に許可を取ってください。\n　　・動画への映り込み、商用利用は可能です\n　　・常識の範囲内でお楽しみください。\n\n\n内容物\nアニメーションフォルダ\nFBXモデルデータ\nテクスチャ（4枚）\nBlenderデータ\nPrefabデータ\nread me\n\nテクスチャのbodyは2枚ありますが、１つは手袋有り用、もうひとつが無し用になります。\n\nシェイプキーはBlenderのCatsプラグインを使ったアイトラッキング・リップシンク・その他表情が入っています。\n\nDynamic Bone導入済みです、先にDynamic boneをimportしてから作業してください。\n\nご不明な点がある方はツイッター（https://twitter.com/kappa_kkkk?lang=ja）かメール（rental_rebellion@yahoo.co.jp）までお願いします","url":"https://booth.pm/ja/items/1264882","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/1199f389-bdb8-48af-966b-ac05340502ea/i/1264882/29f8bd24-8d28-4921-a700-74e8a73a6989_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Nlas8XmPBrTc/S+UNTgWrF7dSZG1yokHO/o2n5c37yc="></script>
+    nonce="YD0y3QPleMvvNvHwviuMxBs+BX0DuWpP6Bmy86h6eZk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1264882/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1264882/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
