updated at: 2023-04-25 22:43, Filament_C.machina(フィラメント_カテゴリ―_マキナ) - 移民船研究所 - BOOTH

--- a/VRChat/16/1264916.html
+++ b/VRChat/16/1264916.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ZTvZXcPPCB7PvrBn3QTDaqqzcOrB11fnI6trmHqXQls="></script>
+    "Zi7sUIt8+2LxnC+uQVxoFzLXti2bM138W4Ye8/ElriA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Filament_C.machina(フィラメント_カテゴリ―_マキナ)","description":"VRC向け3Dアバターです\n\nシェーダーはユニティちゃんトゥーンシェーダー2.06を同梱しています\n\nアバター本体:フルトラッキング動作確認済み・アイトラッキング非対応\n飛行ユニット:フルトラッキング非対応・アイトラッキング非対応\n\n利用規約\n　・著作権は作者である美羽_C.フレール（@MFreru）が保有しています。\n\n　・以下のような使用を禁止致します。\n　　×公序良俗に反する利用\n　　×政治的・宗教的主張に関する利用\n　　×再配布・再販売\n　　×自作発言等\n\n　・テクスチャ改変、モデル改変・営利利用可能です。\n\n  ・本規約は予告なく変更される場合があります。その際は最新のものが適用されます。\n\n　・本モデルデータ、および改変したモデルを使用したことにより発生したトラブルや損失に関して、作者とその関係者、およびその所属するいかなる団体も、一切の責任を負わないものとします。\n\n質問・不明な点がありましたら下記の連絡先にご連絡ください\n\nTwitter:@MFreru\nEmail:miufreru@gmail.com","url":"https://booth.pm/ja/items/1264916","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/bba5e0f7-99ce-4f4d-8fb1-16f4d8e54eea/i/1264916/d1bfb3af-5d55-4510-9c2c-ce03cccc4436_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZTvZXcPPCB7PvrBn3QTDaqqzcOrB11fnI6trmHqXQls="></script>
+    nonce="Zi7sUIt8+2LxnC+uQVxoFzLXti2bM138W4Ye8/ElriA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1264916/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1264916/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
