updated at: 2023-04-25 22:44, オリジナル3Dモデル「ララノア」 - daw - BOOTH

--- a/VRChat/33/1223133.html
+++ b/VRChat/33/1223133.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "OBaJ2uknto8CBATxuML8b6NuTUhWM3Wwg+OCGPOF4+E="></script>
+    "T24u6mdT5uEm3NS290zJGEeQj5PntF9//wvrhz3e92Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「ララノア」","description":"制作者 現世すてみ\n\n下記利用規約が記載されておりますので\nご購入前にお読みいただき、了承の上購入お願いします。\n\n\n\n● 営利利用: 可能\nゲーム, 映像作品, 動画配信等にご利用いただけます\n※ VRChat、Unity等ソフトウェア問わずご利用いただけます\n※ VTuber活動等にご利用いただけます\n※ 企業様が利用する場合はご一報頂けると幸いです\n\n● 改変: 可能\n個人利用について当モデルデータに付属しているデータの改変は自由です\nまた、当モデルの他アバターと組み合わせての使用は自由ですが相手方の規約を確認してください。\n\n● R-18, R-18Gコンテンツでの利用: 可能\nR-18, R-18Gコンテンツでの使用を許可します\n※ 利用媒体の規約を参照してください\n\n● 再配布: 禁止\n当モデルデータに付属しているデータの再配布, 販売は改変の有無を問わず禁止します\nまた、当モデルデータの一部を使用した再配布についても禁止します。\n\n● 改変依頼: 個人間に限り可能\n改変依頼の発注者と受注者の両者が当モデルデータを購入している場合かつ個人間の依頼に限り、改変した当モデルデータの両者間でのやり取りを許可します\nまた、テクスチャ及びpsdについては受注者が購入していない場合においても許可します\n※ いかなる理由を持っても不特定多数に向けたデータの再配布, 販売は禁止します\n\n● VRChatのアバターペデスタルでの利用: 禁止\n\n● 公序良俗に反する行為や目的、政治, 宗教活動、他者に対する誹謗中傷目的での利用: 禁止\n\n\n\n問題がありましたら下記メールアドレスもしくはtwitterDMにてお願いします\nabandonment.of.life☆gmail.com","url":"https://booth.pm/ja/items/1223133","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/9df96392-5a14-4ad7-867b-0b582c88cad2/i/1223133/88fc39e5-9bfc-43e3-a6f2-a6ed529497f2_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OBaJ2uknto8CBATxuML8b6NuTUhWM3Wwg+OCGPOF4+E="></script>
+    nonce="T24u6mdT5uEm3NS290zJGEeQj5PntF9//wvrhz3e92Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -140,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +153,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -195,7 +195,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1223133/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               46
@@ -210,14 +210,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1223133/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               46
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
