updated at: 2023-04-25 22:45, 【オリジナル3Dモデル】クランビット(Clambit)Ver2 - はまとぐり - BOOTH

--- a/VRChat/73/1255773.html
+++ b/VRChat/73/1255773.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "BRPUYaxmKNdhwvsu4uXBZxPLIhRO0tt+hkGNU6fVkTg="></script>
+    "LT1+vuUwQusVBquANWXcqz7o67fmHTxKqHWIIs2dttQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【オリジナル3Dモデル】クランビット(Clambit)Ver2","description":"オリジナル3Dモデル  クランビット(Clambit)\n制作者 先導者P\n\nポリゴン数5000以下のローポリゴンモデルです。\nVRchatでの使用を想定しております。\nVer2より多数のオリジナルエモートを追加しました。","url":"https://booth.pm/ja/items/1255773","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/0e6df837-cf94-4af6-a074-ceba69ecae5c/i/1255773/20c9e667-6014-40e9-8ea8-80f9a0fed0e0_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BRPUYaxmKNdhwvsu4uXBZxPLIhRO0tt+hkGNU6fVkTg="></script>
+    nonce="LT1+vuUwQusVBquANWXcqz7o67fmHTxKqHWIIs2dttQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1255773/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               28
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1255773/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               28
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
