updated at: 2023-04-25 22:48, オリジナル3Dモデル　スチームパンク風　マスケット銃 - melomen - BOOTH

--- a/VRChat/95/1253795.html
+++ b/VRChat/95/1253795.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "5Gf+fjJBqu8whcezyzZvF+XK0Ck7u0ZHrB2gGrz3S4o="></script>
+    "kGmPDF/eX0pX0OmTVBZJPCyFr/kRU7xQGBlJpsaBvlA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル　スチームパンク風　マスケット銃","description":"商品内容\n・unity package\n・FBX形式モデルデータ\n・テクスチャー１枚\n・利用規約\n・アニメーション（shot）\nバーチャルマーケット2出店、CRY Eng.　の\nメロンソーダと冷麺　@theebjc1　です\n\n\nアバターのあるシーンにprefabをドラッグ＆ドロップし\n追従してほしい場所（スケルトン、アーマチュアなどの手にあたる部分など）に配置\nお好みの大きさ、角度などに調整してからモデルをアップロードしてください\n※オーバーライドアニメーションなどの設定は割愛させていただきます\nご了承ください\n__________________________________________________________________\n※※※利用規約※※※\n※著作権について※\n・当モデルおよび関連データの著作権は製作者の\n　メロンソーダと冷麺 @theebjc1\n　に帰属するものとします\n※禁止行為について※\n・VRChat向けとありますがゲームや撮影などそれ以外のコンテンツでもご自由にお使い\nください（商用、非商用問わず）\n使う際には一報いれて頂けると喜びます！　\n・改変はご自由にどうぞ\n・改変、非改変に関わらず再配布、転売の禁止\n・公序良俗に反する行為、宗教的、政治的利用\n　他者に対する誹謗中傷目的での利用の禁止\n\n※免責事項※\n・モデルデータを利用して発生したいかなる損害、損失、その他不利益などには一切の責任を負いません\nこの利用規約は予告なく変更する場合があります\n＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿\nポリゴン数 △4610\n","url":"https://booth.pm/ja/items/1253795","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/a34842f5-5430-4f0c-958c-ae3c9c17a04e/i/1253795/e9e71fa2-e13f-462f-b001-f1f69394d749_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5Gf+fjJBqu8whcezyzZvF+XK0Ck7u0ZHrB2gGrz3S4o="></script>
+    nonce="kGmPDF/eX0pX0OmTVBZJPCyFr/kRU7xQGBlJpsaBvlA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1253795/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               123
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1253795/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               123
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
